--- a/index.html
+++ b/index.html
@@ -3,10 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Ever Github Repo
-    </title>
+    <title>Blossom Flower Shop</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Blossom Flower Shop</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="home">
+        <h2>Welcome to Blossom Flower Shop</h2>
+        <p>Your one-stop shop for fresh and beautiful flowers.</p>
+    </section>
+
+    <section id="about">
+        <h2>About Us</h2>
+        <p>At Blossom Flower Shop, we pride ourselves on providing the best quality flowers for all occasions. Our expert florists carefully select and arrange each bouquet to ensure you receive only the best.</p>
+    </section>
+
+    <section id="products">
+        <h2>Our Products</h2>
+        <div class="product">
+            <h3>Roses</h3>
+            <p>Fresh and vibrant roses in various colors.</p>
+        </div>
+        <div class="product">
+            <h3>Tulips</h3>
+            <p>Bright and cheerful tulips to lighten up your day.</p>
+        </div>
+        <div class="product">
+            <h3>Orchids</h3>
+            <p>Elegant and exotic orchids for a touch of sophistication.</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Phone: 123-456-7890</p>
+        <p>Email: info@blossomflowershop.com</p>
+        <p>Address: 123 Blossom Street, Flower City</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Blossom Flower Shop. All rights reserved.</p>
+    </footer>
 </body>
 </html>
